refactor day 03 functions and add tests

--- a/day03/lib/dune
+++ b/day03/lib/dune
@@ -1,3 +1,6 @@
 (library
- (name "advent")
- (libraries "str"))
+ (name advent)
+ (inline_tests)
+ (libraries str)
+ (preprocess
+  (pps ppx_inline_test ppx_assert)))
